set(RECO_HEADERS 
  CCMConvertBinary2ROOT.h
  CCMFindEvents.h
  CCMApplyPreCuts.h
  CCMNearlineDiag.h
  CCMNa22Cuts.h
  )


set(INCLUDE_DIRECTORIES ${ROOT_INCLUDE_DIR} $ENV{XERCESINCLUDE} ${CCMAnalysis_INCLUDE_DIRS})

include_directories(${INCLUDE_DIRECTORIES})

set(LINK_DIRECTORIES /usr/lib64/ ${ROOT_LIBRARY_DIR} $ENV{XERCESLIB} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

link_directories(${LINK_DIRECTORIES})

set(CMAKE_CXX_LINKER_FLAGS "${CMAKE_CXX_LINKER_FLAGS} ${ROOT_LIBRARIES} $ENV{XERCESLIB}")

set(RECO_SRCS
  CCMConvertBinary2ROOT.cxx
  CCMFindEvents.cxx
  CCMApplyPreCuts.cxx
  CCMNearlineDiag.cxx
  CCMNa22Cuts.cxx
  )

set(RECO_LINKDEF LinkDef.h)
set(RECO_DICTIONARY CCMRecoDict)
ROOT_GENERATE_DICTIONARY("${RECO_DICTIONARY}" "${RECO_HEADERS}" LINKDEF "${RECO_LINKDEF}")

set(RECO_SRCS ${RECO_SRCS} ${RECO_DICTIONARY}.cxx)

add_library(CCMReco SHARED ${RECO_SRCS})
#CREATE_LIBTOOL_FILE(CCMRECO ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
target_link_libraries(CCMReco ${ROOT_LIBRARIES} CCMUtils CCMSPE CCMDS CCMXML)

#install(FILES ${RECO_HEADERS} DESTINATION $ENV{CCMINSTALL}/include)
