set(TEMPLATES_HEADERS 
  CCMTemplateAna.h
  )


set(INCLUDE_DIRECTORIES ${ROOT_INCLUDE_DIR} $ENV{XERCESINCLUDE} ${CCMAnalysis_INCLUDE_DIRS})

include_directories(${INCLUDE_DIRECTORIES})

set(LINK_DIRECTORIES /usr/lib64/ ${ROOT_LIBRARY_DIR} $ENV{XERCESLIB} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

link_directories(${LINK_DIRECTORIES})

set(CMAKE_CXX_LINKER_FLAGS "${CMAKE_CXX_LINKER_FLAGS} ${ROOT_LIBRARIES} $ENV{XERCESLIB}")

set(TEMPLATES_SRCS
  CCMTemplateAna.cxx
  )

set(TEMPLATES_LINKDEF LinkDef.h)
set(TEMPLATES_DICTIONARY CCMTemplatesDict)
ROOT_GENERATE_DICTIONARY("${TEMPLATES_DICTIONARY}" "${TEMPLATES_HEADERS}" LINKDEF "${TEMPLATES_LINKDEF}")

set(TEMPLATES_SRCS ${TEMPLATES_SRCS} ${TEMPLATES_DICTIONARY}.cxx)

add_library(CCMTemplates SHARED ${TEMPLATES_SRCS})
#CREATE_LIBTOOL_FILE(CCMRECO ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
target_link_libraries(CCMTemplates ${ROOT_LIBRARIES} CCMUtils CCMDS CCMXML)

install(FILES ${TEMPLATES_HEADERS} DESTINATION $ENV{CCMINSTALLBuild}/include)
