set(MODULENAME CCMTemplates)

set(LOCAL_HEADERS 
  CCMTemplateAna.h
  )

set(LOCAL_SRCS
  CCMTemplateAna.cxx
  )

set(LOCAL_LINKDEF LinkDef.h)
set(LOCAL_DICTIONARY "${MODULENAME}Dict")
set(LINK_DIRECTORIES ${ROOT_LIBRARY_DIR} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

set(CMAKE_CXX_LINKER_FLAGS "${CMAKE_CXX_LINKER_FLAGS} ${ROOT_LIBRARIES}")

add_library(${MODULENAME} SHARED ${LOCAL_SRCS} ${LOCAL_HEADERS})
set_target_properties(${MODULENAME} PROPERTIES PUBLIC_HEADER "${LOCAL_HEADERS}")
include_directories(${MODULENAME} PRIVATE ${ROOT_INCLUDE_DIR})
include_directories(${MODULENAME} PRIVATE ${CCMAnalysis_INCLUDE_DIRS})
include_directories(${MODULENAME} PRIVATE ${XercesC_INCLUDE_DIRS})
target_link_libraries(${MODULENAME} ${ROOT_LIBRARIES} CCMUtils CCMDS CCMXML ${XercesC_LIBRARIES})
target_link_directories(${MODULENAME} PUBLIC ${ROOT_LIBRARY_DIR} ${XercesC_LIBRARY_DIRS} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
set(TEMPLATES_LINKDEF LinkDef.h)
set(TEMPLATES_DICTIONARY CCMTemplatesDict)
ROOT_GENERATE_DICTIONARY("${TEMPLATES_DICTIONARY}" "${TEMPLATES_HEADERS}" LINKDEF "${TEMPLATES_LINKDEF}")

set(TEMPLATES_SRCS ${TEMPLATES_SRCS} ${TEMPLATES_DICTIONARY}.cxx)

install(FILES ${TEMPLATES_HEADERS} DESTINATION $ENV{CCMINSTALLBuild}/include)
